# oraculo

./: .gitignore  DOCS.md  INGENIERO.md  LICENSE  README.md  install.sh  pyproject.toml
guardian_rules/: MANIFEST.sha256  reglas.json
hermes/: AGENTS_BLOCK.md  SKILL.md  oraculo_ciclo.sh
herramientas/: README.md  index.json
oraculo/: __init__.py  cli.py  compilar.py  conmutar.py  detectar.py  estado.py  guardian.py  log.py  log_sync.py  manada.py  observar.py
scripts/: bench.py  log_admin.py
tests/: test_log_admin.py  test_oraculo.py
