[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "oraculo-agent"
version = "0.1.0"
description = "Your agent did this task 3 times. The 4th is free. Automatic graduation of repeated agent tasks into tested, self-healing .py scripts."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "nklabs-dev" }]
requires-python = ">=3.10"
keywords = [
  "ai-agents", "hermes-agent", "claude-code", "token-savings",
  "agent-compilation", "llm-cost", "self-improving-agents",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/nklabs-dev/oraculo"

[project.scripts]
oraculo = "oraculo.cli:main"

[tool.setuptools]
packages = ["oraculo"]
